fix moving text 2 line on small screen and add basic box on what i do

--- a/src/styles/pages/_whatido.scss
+++ b/src/styles/pages/_whatido.scss
@@ -1,7 +1,6 @@
 .box {
   height: 8px;
   width: 8px;
-  margin: 0px 15px;
   background-color: rgba(1, 70, 204, 1);
 }
 
@@ -26,7 +25,7 @@
   font-family: "Gambetta";
   font-style: italic;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: rgba(175, 176, 171, 1);
 }
 
